# python-cpp-experiments

./: .gitignore  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: buildtest.yml
notebooks/: example.ipynb
pycpp/: utils.py
pycpp/cpp/: CMakeLists.txt  my_linalg.cpp
pycpp/my_linalg/: __init__.py
pycpp/tests/: requirements.unit_test.txt  test_my_linalg.py  test_utils.py
