[project]
name = "pycpp_experiments"
version = "0.0.1"
description = "A project for experimenting with python C++ bindings"
readme = "README.md"
authors = [
    {name = "Leonidas Tsaprounis", email=""}
]
requires-python=">=3.8,<3.11"
dependencies=[
    "pybind11[global]>=2.6.0",
    "numpy>=1.14",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "black",
    "pytest",
    "pydocstyle",
    "pre-commit",
    "ipykernel",
]

[tool.pytest.ini_options]
addopts= "--ignore=pycpp/cpp/carma"

